[project]
name = "rag-against-the-machine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bm25s>=0.3.9",
    "chromadb>=1.5.9",
    "fire>=0.7.1",
    "huggingface-hub>=1.14.0",
    "langchain>=1.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "sentence-transformers>=5.5.0",
    "torch>=2.12.0",
    "transformers>=5.8.1",
]
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/rocm7.2"
